--- a/style.css
+++ b/style.css
@@ -16,9 +16,48 @@ body {
 
 .cube-demo {
    border: 2px solid black;
+	border-bottom: 1px solid #333333;
    float: left;
-   width: 800px;
-   height: 800px;
+   /* 
+	width: 250px;
+   height: 220px;
+	*/
+	width: 500px;
+   height: 440px;
+	
    margin: 10px;
+	padding: 0px;
    background-color: #AAAAAA;
+}
+
+.cube-controls {
+	border: inherit;
+	border-bottom: 2px solid black;
+	border-top: 0px;
+	padding: 5px;
+	background-color: #CCCCCC;
+
+	margin: 0px;
+	text-align: center;
+}
+
+.controls-move-index {
+	display: inline-block;
+	background: #FFFFFF;
+	border: 1px solid #333333;
+	padding: 2px 15px 2px;
+	margin-left: 4px;
+	margin-right: 4px;
+	height: 16px;
+	width: 50px;
+}
+
+hr {
+	margin: 3px;
+}
+
+.controls-button {
+	margin: 0px 4px;
+	width: 28px;
+	height: 22px;
 }
