--- a/style.css
+++ b/style.css
@@ -18,12 +18,13 @@ body {
    border: 2px solid black;
 	border-bottom: 1px solid #333333;
    float: left;
-   /* 
+    
 	width: 250px;
    height: 220px;
-	*/
-	width: 500px;
+	
+	/*width: 500px;
    height: 440px;
+	*/
 	
    margin: 10px;
 	padding: 0px;
